fixed flickering in safari@macos

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -192,6 +192,7 @@ fieldset {
   align-self: auto;
   order: 0;
   overflow: auto;
+  overscroll-behavior: none;
   z-index: 1;
 
   &[data-scrolling-active] {
