--- a/src/styles/terrain/terrain.less
+++ b/src/styles/terrain/terrain.less
@@ -33,13 +33,9 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  transition: background-image 1s ease-in-out;
-
-  img {
-    box-shadow:
-      0 0 50px 25px #000000 inset,
-      0 0 0 150px #000000;
-  }
+  box-shadow:
+    0 0 50px 25px #000000 inset,
+    0 0 0 150px #000000;
 }
 
 .lights-and-shadows {
