--- a/src/styles/terrain/wireframe.less
+++ b/src/styles/terrain/wireframe.less
@@ -13,6 +13,7 @@
 .wireframe-wrapper {
   position: absolute;
   cursor: crosshair;
+  z-index: 1;
 
   .wireframe {
     transform-origin: left top;
